# Salary-Calculation

./: .dockerignore  .gitignore  compose.yaml  pyproject.toml  readme.md
.github/workflows/: github-actions.yaml
app/: Dockerfile  main.py  requirements.txt
app/api/routes/: salary.py
app/models/: salary.py
app/services/: salary_service.py
frontend/: Dockerfile  app.py  requirements.txt
test/: conftest.py  test_salary_routes.py  test_salary_service.py
