[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salary-calculation"
version = "0.1.0"
description = "Salary calculation application with FastAPI backend and Streamlit frontend"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "pydantic>=1.10.7",
    "pandas>=1.5.3",
    "openpyxl>=3.1.2",
    "python-multipart>=0.0.6",
    "streamlit>=1.22.0",
    "requests>=2.28.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
test = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",  # For testing FastAPI endpoints
]
frontend = [
    "streamlit>=1.22.0",
    "requests>=2.28.2",
]

[tool.pytest]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.setuptools]
packages = ["app", "frontend"]